static/css: lists: prevent text wrapping under bullet

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -10,9 +10,9 @@ ul, ol {
     font: 1rem SourceSansPro, sans-serif;
     text-align: justify;
     text-justify: inter-word;
-    padding: 0rem;
-    margin: 0rem 0rem 0rem 0.5rem;
-    list-style-position: inside;
+    padding: 0rem 0rem 0rem 1rem;
+    margin: 0rem;
+    list-style-position: outside;
 }
 
 /* Same size for links in paras and lists */
@@ -173,9 +173,16 @@ hr {
 }
 
 .footnotes p, .footnotes ol {
-    display: inline;
     font: normal 0.8rem JetBrainsMono;
     text-align: left;
+}
+
+.footnotes ol {
+    padding: 0rem 0rem 0rem 2rem;
+    margin: 0rem;
+}
+
+.footnotes p {
     padding: 0rem;
     margin: 0rem;
 }
